# RDBMS

./: Cargo.toml  README.md
src/: bsearch.rs  btree.rs  buffer.rs  disk.rs  slotted.rs
src/btree/: branch.rs  leaf.rs  meta.rs  node.rs
